--- a/mydjangoproject2/templates/index.html
+++ b/mydjangoproject2/templates/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-lalala
+lalala <br />
+<div class="col-xs-3">
+{% for player in players %}
+    <div class="btn btn-warning btn-lg">
+    {{ player.name}}
+    </div><br />
+{% endfor %}
+</div>
 </body>
 </html>
