--- a/mydjangoproject2/templates/index.html
+++ b/mydjangoproject2/templates/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
 lalala <br />
 <div class="col-xs-3">
 {% for player in players %}
-    <div class="btn btn-warning btn-lg">
+    <div class="btn btn-lg btn-success">
     {{ player.name}}
     </div><br />
 {% endfor %}
 </div>
+
+<div class="parent">
+  <div class="origin">
+    <div      id="draggable-1"
+      class="draggable-element"
+      draggable="true"
+      ondragstart="onDragStart(event);"   >
+      draggable
+    </div>
+  </div>
+     <div    class="dropzone"
+               ondragover="onDragOver(event);"
+               ondrop="onDrop(event);">
+    dropzone
+  </div>
+</div>
+
+<script src="static/app.js"></script>
 </body>
 </html>
